--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@heroicons/vue": "^2.2.0",
+    "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
+    "motion-v": "^1.0.0-beta.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@inspira-ui/plugins": "^0.0.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "prettier": "3.5.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
